--- a/html/events/forms/other.html
+++ b/html/events/forms/other.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../../../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -39,7 +39,7 @@
         </li>
       </ul>
 
-      <div class="grid-bottom-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="../../../index.html">Logout</a>
       </div>
@@ -53,39 +53,35 @@
         <hr>
       </header>
 
-      <form class="form-container" action="" method="post" id="otherScheduleForm">
+      <form class="form-container" method="post" id="otherScheduleForm">
 
-        <label label for="">Name</label>
+        <label label for="">Event Name</label>
         <input class="input" type="text" name="" value="" placeholder="Insert event name">
+
         <label label for="">Location</label>
         <input class="input" type="text" name="" value="" placeholder="Insert location here">
-        <label label for="">Organizer</label>
-        <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
-        <label>Telephone No.</label>
-        <input class="input" type="number" placeholder="Enter contact number" required>
 
-        <div class="row">
-          <span>
-            <label>Date</label>
-            <input class="input" type="date" required>
+        <div class="row-flex">
+          <span class="col-9">
+            <label label for="">Organizer's Name</label>
+            <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
           </span>
 
-          <span>
-            <label>Time</label>
-            <input class="input" type="Time" required>
+          <span class="col-3">
+            <label>Contact Number</label>
+            <input class="input" type="number" placeholder="Enter contact number" required>
           </span>
         </div>
 
         <label>Description</label>
-        <textarea class="input textarea" name="name" rows="5"></textarea>
+        <textarea class="input textarea" name="name" rows="8"></textarea>
 
       </form>
     </div>
 
-    <div class="side-to-side">
-      <button class="btn btn-outline btn-secondary" onclick="changePage('../index.html')">Cancel</button>
-      <button class="btn" type="submit" onclick="" form="otherScheduleForm">Submit</button>
-      <button class="btn" type="submit" onclick="changePage('../index.html')">Submit</button>
+    <div class="form-actions row-flex">
+      <button class="btn col-5" type="submit" onclick="changePage('../index.html')">Submit</button>
+      <a class="btn-secondary col-5" href="../index.html">Cancel</a>
     </div>
 
 
