--- a/html/events/index.html
+++ b/html/events/index.html
@@ -138,7 +138,7 @@
             <td>Baptismal</td>
             <td>Baby Baptism</td>
             <td class="date">MMMM dd, YYYY</td>
-            <td><button class="btn btn-certificate" type="button" name="button" onclick="getCertificate('requestCertificate', 123123, event)">Certificate</button></td>
+            <td><button class="btn btn-certificate" type="button" name="button" onclick="requestCertificate('requestCertificate', event)">Certificate</button></td>
           </tr>
 
           <tr id="event3" onclick="getData('anniversary', 123123)">
